Refactor module references